# girafficase

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml
cmake/: PVS-Studio.cmake
config/: client.json  giraffic.json
docker/: CMakeLists.txt  Dockerfile.dev
src/app/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
src/core/: error.cpp  error.hpp  headers.hpp  logger.hpp
src/http/server/: dispatcher.cpp  dispatcher.hpp  factory.cpp  factory.hpp  handler.cpp  handler.hpp  server.cpp  server.hpp
src/http/utils/: executor.hpp  params.cpp  params.hpp  uri.cpp  uri.hpp
src/losses/: detector.cpp  detector.hpp
src/messages/: CMakeLists.txt  schema.hpp
src/messages/schema/: giraffic.fbs
src/primes/: detector.cpp  detector.hpp
src/udp/client/: CMakeLists.txt  app.cpp  app.hpp  main.cpp
src/udp/server/: server.cpp  server.hpp
tests/losses/: CMakeLists.txt  test.cpp
tests/primes/: CMakeLists.txt  test.cpp
